# SmartBET

./: .gitignore  Betano.cpp  Betano.h  CMakeLists.txt  CasaPariurilor.cpp  CasaPariurilor.h  Http.h  IFetchBets.h  README.md  StanleyBet.h  Unibet.cpp  Unibet.h  eFortuna.cpp  eFortuna.h  main.cpp  util.cpp  util.h
include/Http/: Http.h
include/Util/: util.cpp  util.h
src/: IFetchBets.h  main.cpp
src/Case/: Betano.cpp  Betano.h  CasaPariurilor.cpp  CasaPariurilor.h  StanleyBet.cpp  eFortuna.cpp
